ingress/ingress-rule.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /front
        backend:
          serviceName: ingress-service
          servicePort: 8080
  - host: front.local.com
    http:
      paths:
      - backend:
          serviceName: ingress-service
          servicePort: 8080
